best-practices/add_network_policy/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../add_network_policy.yaml
assert:
- policy-assert.yaml
unitTest: false
