best-practices/add_network_policy/e2e/03-ns.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../resource.yaml
assert:
- ../generatedResource.yaml
error:
- notGeneratedResource.yaml
