best-practices/add_network_policy/e2e/notGeneratedResource.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: bye-world-namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
